Bug 247049 - bookmarks sidebar folder popup menu "Create New Folder" does not ask for the name
Summary: bookmarks sidebar folder popup menu "Create New Folder" does not ask for the ...
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: sidebar (other bugs)
Version First Reported In: unspecified
Platform: Ubuntu Linux
: NOR normal
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-08-08 10:42 UTC by Romans Kasperovics
Modified: 2012-02-06 17:10 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.9.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Romans Kasperovics 2010-08-08 10:42:11 UTC
Version:           unspecified (using KDE 4.4.2) 
OS:                Linux

When I right-click any folder in the bookmarks sidebar and choose "Create New Folder", a nameless folder is immediately created and I have to right-click it again, chose "Properties" and set the name. Instead it should open the same dialog before creating the subfolder.

Reproducible: Always

Steps to Reproduce:
open bookmarks sidebar, choose new folder

Actual Results:  
a nameless folder created

Expected Results:  
a modal dialog requesting the new name displayed

OS: Linux (i686) release 2.6.32-24-generic
Compiler: cc
Comment 1 FiNeX 2010-08-10 21:31:19 UTC
Bug confirmed in KDE 4.4.5.
Comment 2 Dawit Alemayehu 2012-02-06 17:10:17 UTC
Git commit ab4dfb4a5619dd36edb0fc3dd3ec71bb06f2da56 by Dawit Alemayehu.
Committed on 02/02/2012 at 00:34.
Pushed by adawit into branch 'master'.

When creating a new bookmark folder, prompt for the folder name.
FIXED-IN: 4.9.0
REVIEW: 103845

M  +9    -1    konqueror/sidebar/trees/bookmark_module/bookmark_module.cpp

http://commits.kde.org/kde-baseapps/ab4dfb4a5619dd36edb0fc3dd3ec71bb06f2da56