When creating a new bookmark folder, prompt for the folder name.

BUG: 247049
FIXED-IN: 4.9.0
REVIEW: 103845